@@ -39,6 +39,10 @@
 #' background is used (Default assumes an idealized homogeneous background).
 #' @param relative should relative quantum catches be returned (i.e. is it a color
 #' space model? Defaults to \code{TRUE}).
+#' @param scale a value by which the illuminant will be multiplied. Useful for when the 
+#' illuminant is a relative value (i.e. transformed to a maximum of 1 or to a percentage),
+#' and does not correspond to quantum flux units (umol*s^-1*m^-2). Useful values
+#' are, for example, 500 (for dim light) and 10000 (for bright illumination).
 #'
 #' @return An object of class \code{vismodel} containing the following data frames:
 #' @return \code{descriptive}: Descriptive statistics of maximum and normalized 
@@ -53,7 +57,7 @@
 #' @examples \dontrun{
 #' data(sicalis)
 #' vis.sicalis <- vismodel(sicalis, visual='avg.uv')
-#' tcs.sicalis <- tcs(vis.sicalis, by=rep(c('C','T','B'),7))}
+#' tcs.sicalis <- tcs(vis.sicalis)}
 #' @author Rafael Maia \email{rm72@@zips.uakron.edu}
 #' @references Vorobyev, M., Osorio, D., Bennett, A., Marshall, N., & Cuthill, I. (1998). Tetrachromacy, oil droplets and bird plumage colours. Journal Of Comparative Physiology A-Neuroethology Sensory Neural And Behavioral Physiology, 183(5), 621-633.
 #' @references Hart, N. S. (2001). The visual ecology of avian photoreceptors. Progress In Retinal And Eye Research, 20(5), 675-703.
@@ -63,7 +67,7 @@
 vismodel <- function(rspecdata, 
   visual = c("avg.uv", "avg.v", "bt", "star", "pfowl"), 
   achromatic = c("bt.dc","ch.dc","ml","none"),
-  illum = c('ideal','bluesky','D65','forestshade'), bkg = 'ideal', relative=TRUE)
+  illum = c('ideal','bluesky','D65','forestshade'), scale=1, bkg = 'ideal', relative=TRUE)
 {
 
 # remove & save colum with wavelengths
@@ -136,9 +140,8 @@ descriptive <- data.frame(lambdamax,norm.B,max.B)
 # scale to maximum reflectance = 1
 yscale <- apply(y,2,function(x) x/max(x))
 
-#Qi
-# at the moment this will only work for avian type visual systems. 
-# UPDATE: can now handle different lengths of sensory systems.
+# scale illuminant
+illum <- illum * scale
 
 indices = 1:dim(S)[2]
 
@@ -183,7 +186,7 @@ fi <- log(qi)
 if(relative){
   Qi[,-dim(Qi)[2]] <- Qi[,-dim(Qi)[2]]/rowSums(Qi[,-dim(Qi)[2]])
   qi[,-dim(qi)[2]] <- qi[,-dim(qi)[2]]/rowSums(qi[,-dim(qi)[2]])
-  fi[,-dim(fi)[2]] <- (fi[,-dim(fi)[2]]-rowSums(fi[,-dim(fi)[2]]))/rowSums((fi[,-dim(fi)[2]])-rowSums(fi[,-dim(fi)[2]]))
+  fi[,-dim(fi)[2]] <- fi[,-dim(fi)[2]]/rowSums(fi[,-dim(fi)[2]])
 
 
 # Place dark specs in achromatic center?
@@ -198,7 +201,7 @@ if(relative){
 res<-list(Qi=Qi, qi=qi, fi=fi)
 class(res) <- 'vismodel'
 attr(res,'visualsystem') <- c(visual,achromatic)
-attr(res,'illuminant') <- illum2
+attr(res,'illuminant') <- paste(illum2,', scale = ',scale, sep='')
 attr(res,'background') <- bg2
 attr(res,'relative') <- relative
 res
